server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camserver
  name: camserver
  namespace: efficient-edge-demo
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: camserver
  sessionAffinity: None
  type: ClusterIP
